# AIVA

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  sample.py
aiva/: __init__.py
aiva/api/: __init__.py
aiva/api/v1/: __init__.py
aiva/api/v1/endpoints/: __init__.py  agent.py
aiva/core/: config.py  docs.py  logging.py
aiva/db/: __init__.py
aiva/schemas/: __init__.py  agent.py  base.py
aiva/services/agents/: __init__.py  agent_model.py  agent_tools.py  finance_agent.py  prompts.py
aiva/services/tools/: __init__.py  base.py  expense_inserter.py  query_builder.py  receipt_parser.py  sql_explainer.py
aiva/utils/: __init__.py
tests/: conftest.py
tests/api/: test_agent_endpoints.py
tests/services/: test_finance_agent.py
